# amc-backend-py

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  config.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.githooks/: pre-push
.github/workflows/: auto-bump-version.yml
alembic/: env.py
alembic/versions/: .gitkeep
app/: __init__.py  dependencies.py  main.py
app/core/: __init__.py  config.py  database.py  exceptions.py  logging.py  security.py
app/models/: __init__.py  account.py  adressen.py  anlaesse.py  budget.py  clubmeister.py  fiscalyear.py  journal.py  journal_receipt.py  kegelkasse.py  kegelmeister.py  meisterschaft.py  parameter.py  receipt.py  sessions.py  user.py
app/routers/: account.py  adressen.py  anlaesse.py  auth.py  budget.py  clubmeister.py  file.py  fiscalyear.py  journal.py  journal_receipt.py  kegelkasse.py  kegelmeister.py  meisterschaft.py  parameter.py  receipt.py  user.py
app/schemas/: __init__.py  account.py  adressen.py  anlaesse.py  budget.py  clubmeister.py  fiscalyear.py  journal.py  journal_receipt.py  kegelkasse.py  kegelmeister.py  meisterschaft.py  parameter.py  receipt.py  ret_data.py  user.py
app/utils/: __init__.py  (+2 more)
scripts/: push-main.sh
tests/: conftest.py  test_account.py  test_adressen.py  test_anlaesse.py  test_auth.py  test_budget.py  test_clubmeister.py  test_file.py  test_fiscalyear.py  test_journal.py  test_journal_receipt.py  test_kegelkasse.py  test_kegelmeister.py  test_meisterschaft.py  test_parameter.py  test_receipt.py  test_user.py
